[TL] Moves dates and organisers onto the main page

--- a/index.html
+++ b/index.html
@@ -29,4 +29,21 @@ layout: default
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 -->
+
+
+<h2 id="dates-and-organisers">This Season's Meeting Dates And Organisers</h2>
+<p>For more details, see the <a href="/events">Events</a> page.</p>
+
+<ul>
+ <li><b>Feb 8</b>: John Heffernan</li>
+ <li><b>March 14</b>: Saori Howse</li>
+ <li><b>April 11</b>: Andrew Lewandowski</li>
+ <li><b>May 9</b>: Lewis Lev</li>
+ <li><b>June 13</b>: John Heffernan</li>
+ <li><b>July 11</b>: Liz Sharma</li>
+ <li><b>Sept 12</b>: Saori Howse</li>
+ <li><b>Oct 10</b>: Lewis Lev</li>
+ <li><b>Nov 14</b>: David Smith</li>
+ <li><b>Dec 12</b>: Liz Sharma</li>
+</ul>
 </div>
