--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Latest Posts
-excerpt: "A simple and clean responsive Jekyll theme for words and photos."
+title: The Ealing Chamber Music Club
+excerpt: "Website of the Ealing Chamber Music Club"
 search_omit: true
 ---
 
