[TL] Update site with Mar, Apr, May and Jun events and updated organisers' list

--- a/index.html
+++ b/index.html
@@ -36,10 +36,34 @@ layout: default
     <p>For more details, see the <a href="/events">Events</a> page.</p>
 
     <ul>
-        <li><b>Mar 2017</b>: Saori Howse</li>
-        <li><b>April 2017</b>: Lewis Lev</li>
-        <li><b>May 2017</b>: John Heffernan</li>
-        <li><b>June 2017</b>: Andrew Lewandowski</li>
-        <li><b>July 2017</b>: Liz Sharma</li>
+        <li><b>July 2017</b>: Liz</li>
+        <li><b>Sept 2017</b>: Andrew</li>
+        <li><b>Oct 2017</b>: Li Lin</li>
+        <li><b>Nov 2017</b>: David</li>
+        <li><b>Dec 2017</b>: Liz</li>
+        <li><b>Jan 2018</b>: John</li>
+        <li><b>Feb 2018</b>: Saori</li>
+        <li><b>March 2018</b>: Andrew</li>
+        <li><b>April 2018</b>: Li Lin</li>
+        <li><b>May 2018</b>: John</li>
+
     </ul>
 </div>
+
+
+2017
+May -       John
+June -      Saori
+July -        Liz
+
+Sept -       Andrew
+Oct -         Li Lin
+Nov -        David
+Dec -        Liz
+
+2018
+Jan -         John
+Feb -        Saori
+March -    Andrew
+April -       Li Lin
+May -        John
