[TL] Fixes booboo in concert organisers' list

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@ layout: default
     </ul>
 
     See older posts <a href="/posts/index.html">here</a>.
-    
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+
+    If you have newsreader software and want to add new posts from this site as an RSS feed, you can
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">here</a>.</p>
 
 
     <h2 id="dates-and-organisers">This Season's Meeting Dates And Organisers</h2>
@@ -51,19 +52,3 @@ layout: default
 </div>
 
 
-2017
-May -       John
-June -      Saori
-July -        Liz
-
-Sept -       Andrew
-Oct -         Li Lin
-Nov -        David
-Dec -        Liz
-
-2018
-Jan -         John
-Feb -        Saori
-March -    Andrew
-April -       Li Lin
-May -        John
