[TL] Redirect index.html to new wordpress page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
----
-layout: default
----
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="1; url=https://ealingchambermusic.wordpress.com">
+    <script type="text/javascript">
+            window.location.href = "https://ealingchambermusic.wordpress.com"
+        </script>
+    <title>Redirecting to https://ealingchambermusic.wordpress.com</title>
+</head>
+<body>
+If you are not redirected automatically, follow this <a href='https://ealingchambermusic.wordpress.com'>link to the
+new website location.</a>.
+</body>
+</html>
 
+
+<!--
 <div class="home">
     <img src="/images/mousicians-small.jpg"></img>
     <h1>Welcome!</h1>
@@ -50,5 +64,6 @@ layout: default
 
     </ul>
 </div>
+-->
 
 
